--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,14 @@ matplotlib = ">=2.0.0"
 torch = ">=1.8.0"
 LunarCalendar = ">=0.0.9"
 convertdate = ">=2.1.2"
-holidays = ">=0.11.3.1"
+holidays = "^0.14.2"
 python-dateutil = ">=2.8.0"
 tqdm = ">=4.50.2"
 torch-lr-finder = ">=0.2.1"
 ipywidgets = ">=7.5.1"
 dataclasses = ">=0.6"
+kaleido = "0.2.1"
+plotly = "^5.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
